delete 2 files and update 1 file

--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
     <title>PokéEggs</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon/egg.png" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/modal.css" />
-    <link rel="stylesheet" href="css/tooltip.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/egg.png" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/modal.css" />
+    <link rel="stylesheet" href="./css/tooltip.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/lib/localforage.min.js" defer></script>
-    <script src="/build/save.system.js" defer></script>
-    <script src="/build/debug.js" defer></script>
-    <script src="/build/types.js" defer></script>
-    <script src="/build/global.js" defer></script>
-    <script src="/build/buffs.js" defer></script>
-    <script src="/build/party.js" defer></script>
-    <script src="/build/item.bag.js" defer></script>
-    <script src="/build/nav.js" defer></script>
-    <script src="/build/menu.js" defer></script>
-    <script src="/build/modal.js" defer></script>
-    <script src="/build/tooltip.js" defer></script>
-    <script src="/build/modal.data.js" defer></script>
-    <script src="/build/item.data.js" defer></script>
-    <script src="/build/pkmn.data.js" defer></script>
-    <script src="/build/species.data.js" defer></script>
-    <script src="/build/main.js" defer></script>
+    <script src="./lib/localforage.min.js" defer></script>
+    <script src="./build/save.system.js" defer></script>
+    <script src="./build/debug.js" defer></script>
+    <script src="./build/types.js" defer></script>
+    <script src="./build/global.js" defer></script>
+    <script src="./build/buffs.js" defer></script>
+    <script src="./build/party.js" defer></script>
+    <script src="./build/item.bag.js" defer></script>
+    <script src="./build/nav.js" defer></script>
+    <script src="./build/menu.js" defer></script>
+    <script src="./build/modal.js" defer></script>
+    <script src="./build/tooltip.js" defer></script>
+    <script src="./build/modal.data.js" defer></script>
+    <script src="./build/item.data.js" defer></script>
+    <script src="./build/pkmn.data.js" defer></script>
+    <script src="./build/species.data.js" defer></script>
+    <script src="./build/main.js" defer></script>
   </head>
 
   <body>
