--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>PokéEggs</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon/egg.png" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/modal.css" />
-    <link rel="stylesheet" href="./css/tooltip.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/modal.css" />
+    <link rel="stylesheet" type="text/css" href="./css/tooltip.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./lib/localforage.min.js" defer></script>
