--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div id="poke-radar-cont" class="main-content main-border" view-index="3"></div>
       <div id="daycare-cont" class="main-content main-border" view-index="4"></div>
       <div id="buff-cont"></div>
+      <div id="party-menu" class="main-border"></div>
       <div id="tooltip" style="display: none">
         <div id="tooltip-cont"></div>
       </div>
