update 16 files and create 2 files

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./build/item.bag.js" defer></script>
     <script src="./build/nav.js" defer></script>
     <script src="./build/menu.js" defer></script>
+    <script src="./build/misc.function.js" defer></script>
     <script src="./build/hotkey.system.js" defer></script>
     <script src="./build/modal.system.js" defer></script>
     <script src="./build/tooltip.js" defer></script>
@@ -32,16 +33,19 @@
 
   <body>
     <main>
-      <div id="navigation"></div>
+      <div class="pane-cont">
+        <div id="lead-pkmn" class="main-bg main-border"></div>
+        <div id="navigation" class="main-bg main-border"></div>
+      </div>
       <div id="main-menu" class="pkmnfont">
         <button id="main-menu-btn" class="menu-style pkmnfont">Menu⮟</button>
         <div id="menu-options" class="menu-style pkmnfont"></div>
       </div>
-      <div id="party-cont" class="main-content main-border" view-index="0" pkmn-menu="party"></div>
-      <div id="pkmn-box-cont" class="main-content main-border" view-index="1" pkmn-menu="box"></div>
-      <div id="item-bag-cont" class="main-content main-border" view-index="2"></div>
-      <div id="poke-radar-cont" class="main-content main-border" view-index="3"></div>
-      <div id="daycare-cont" class="main-content main-border" view-index="4"></div>
+      <div id="party-cont" class="main-bg main-content main-border" view-index="0" pkmn-menu="party"></div>
+      <div id="pkmn-box-cont" class="main-bg main-content main-border" view-index="1" pkmn-menu="box"></div>
+      <div id="item-bag-cont" class="main-bg main-content main-border" view-index="2"></div>
+      <div id="poke-radar-cont" class="main-bg main-content main-border" view-index="3"></div>
+      <div id="daycare-cont" class="main-bg main-content main-border" view-index="4"></div>
       <div id="buff-cont"></div>
       <div id="pkmn-menu" class="main-border"></div>
       <div id="tooltip" style="display: none">
