--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <title>PokéEggs</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon/egg.png" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/modal.css" />
-    <link rel="stylesheet" type="text/css" href="css/tooltip.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/modal.css" />
+    <link rel="stylesheet" type="text/css" href="./css/tooltip.css" />
+    <link rel="stylesheet" type="text/css" href="./css/toast.css" />
+    <link rel="stylesheet" type="text/css" href="./lib/js-snackbar/js-snackbar.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./lib/localforage.min.js" defer></script>
     <script src="./lib/hotkeys.min.js" defer></script>
+    <script src="./lib/js-snackbar/js-snackbar.min.js" defer></script>
     <script src="./build/save.system.js" defer></script>
     <script src="./build/debug.js" defer></script>
     <script src="./build/types.js" defer></script>
@@ -22,6 +25,7 @@
     <script src="./build/misc.function.js" defer></script>
     <script src="./build/hotkey.system.js" defer></script>
     <script src="./build/modal.system.js" defer></script>
+    <script src="./build/toast.system.js" defer></script>
     <script src="./build/tooltip.js" defer></script>
     <script src="./build/menu.data.js" defer></script>
     <script src="./build/modal.data.js" defer></script>
@@ -60,4 +64,7 @@
       <div id="notifier"></div>
     </main>
   </body>
+  <section>
+    <canvas></canvas>
+  </section>
 </html>
