update 17 files and create 2 files

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./build/hotkey.system.js" defer></script>
     <script src="./build/modal.system.js" defer></script>
     <script src="./build/toast.system.js" defer></script>
+    <script src="./build/item.handler.js" defer></script>
     <script src="./build/tooltip.js" defer></script>
     <script src="./build/menu.data.js" defer></script>
     <script src="./build/modal.data.js" defer></script>
