update 22 files and create 6 files

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./lib/localforage.min.js" defer></script>
     <script src="./lib/hotkeys.min.js" defer></script>
+    <script src="./lib/chroma.min.js" defer></script>
     <script src="./lib/js-snackbar/js-snackbar.min.js" defer></script>
     <script src="./build/save.system.js" defer></script>
     <script src="./build/debug.js" defer></script>
@@ -31,6 +32,7 @@
     <script src="./build/menu.data.js" defer></script>
     <script src="./build/modal.data.js" defer></script>
     <script src="./build/item.data.js" defer></script>
+    <script src="./build/nature.data.js" defer></script>
     <script src="./build/pkmn.data.js" defer></script>
     <script src="./build/species.data.js" defer></script>
     <script src="./build/main.js" defer></script>
