create 2 files and update 24 files

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="./build/modal.data.js" defer></script>
     <script src="./build/item.data.js" defer></script>
     <script src="./build/nature.data.js" defer></script>
+    <script src="./build/ability.data.js" defer></script>
     <script src="./build/pkmn.data.js" defer></script>
     <script src="./build/species.data.js" defer></script>
     <script src="./build/main.js" defer></script>
