create 5 files and update 27 files

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="./build/item.data.js" defer></script>
     <script src="./build/nature.data.js" defer></script>
     <script src="./build/ability.data.js" defer></script>
+    <script src="./build/region.data.js" defer></script>
+    <script src="./build/location.data.js" defer></script>
     <script src="./build/pkmn.data.js" defer></script>
     <script src="./build/species.data.js" defer></script>
     <script src="./build/main.js" defer></script>
@@ -53,11 +55,12 @@
       <div id="pokedex-cont" class="main-bg main-content main-border" view-index="1"></div>
       <div id="pkmn-box-cont" class="main-bg main-content main-border" view-index="2" pkmn-menu="box"></div>
       <div id="item-bag-cont" class="main-bg main-content main-border" view-index="3"></div>
-      <div id="poke-radar-cont" class="main-bg main-content main-border" view-index="4"></div>
-      <div id="daycare-cont" class="main-bg main-content main-border" view-index="5"></div>
-      <div id="buff-caster-cont" class="main-bg main-content main-border" view-index="6"></div>
-      <div id="crafting-cont" class="main-bg main-content main-border" view-index="7"></div>
-      <div id="mining-cont" class="main-bg main-content main-border" view-index="8"></div>
+      <div id="world-map-cont" class="main-bg main-content main-border" view-index="4"></div>
+      <div id="poke-radar-cont" class="main-bg main-content main-border" view-index="5"></div>
+      <div id="daycare-cont" class="main-bg main-content main-border" view-index="6"></div>
+      <div id="buff-caster-cont" class="main-bg main-content main-border" view-index="7"></div>
+      <div id="crafting-cont" class="main-bg main-content main-border" view-index="8"></div>
+      <div id="mining-cont" class="main-bg main-content main-border" view-index="9"></div>
       <div id="buff-cont"></div>
       <div id="pkmn-menu" class="main-border"></div>
       <div id="tooltip" style="display: none">
