create 2 files and update 20 files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./build/buffs.js" defer></script>
     <script src="./build/party.js" defer></script>
     <script src="./build/item.bag.js" defer></script>
+    <script src="./build/daycare.system.js" defer></script>
     <script src="./build/nav.js" defer></script>
     <script src="./build/menu.js" defer></script>
     <script src="./build/misc.function.js" defer></script>
