--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="./build/region.data.js" defer></script>
     <script src="./build/location.data.js" defer></script>
     <script src="./build/pkmn.data.js" defer></script>
+    <script src="./build/pkmn.form.data.js" defer></script>
     <script src="./build/species.data.js" defer></script>
     <script src="./build/main.js" defer></script>
   </head>
