update 28 files and create 4 files

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" type="text/css" href="./lib/js-snackbar/js-snackbar.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./lib/hacktimer.min.js"></script>
     <script src="./lib/localforage.min.js" defer></script>
     <script src="./lib/hotkeys.min.js" defer></script>
     <script src="./lib/chroma.min.js" defer></script>
     <script src="./lib/js-snackbar/js-snackbar.min.js" defer></script>
+    <script src="./lib/chance.min.js" defer ></script>
     <script src="./build/save.system.js" defer></script>
     <script src="./build/debug.js" defer></script>
     <script src="./build/types.js" defer></script>
@@ -37,6 +39,7 @@
     <script src="./build/ability.data.js" defer></script>
     <script src="./build/region.data.js" defer></script>
     <script src="./build/location.data.js" defer></script>
+    <script src="./build/evolution.chain.js" defer></script>
     <script src="./build/pkmn.data.js" defer></script>
     <script src="./build/pkmn.form.data.js" defer></script>
     <script src="./build/species.data.js" defer></script>
